# PolaraEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_clean.sh
include/: polara.hpp  polara_defines.hpp  polara_types.hpp
include/core/: camera.hpp  core.hpp  window.hpp
include/graphics/: mesh.hpp  mesh_factory.hpp  primitive.hpp  shader.hpp  texture.hpp
include/input/: mouse.hpp
resources/: triangle.frag  triangle.vert
samples/minecraft-like/: build.sh  main.cpp
samples/test/: build.sh  main.cpp  program
src/core/: pl_delta_time.cpp
src/core/camera/: pl_camera_manager.cpp
src/core/window/: pl_window_manager.cpp
src/graphics/mesh/: pl_mesh_factory_manager.cpp  pl_mesh_manager.cpp
src/graphics/primitive/: pl_primitive_cone.cpp  pl_primitive_cube.cpp  pl_primitive_manager.cpp  pl_primitive_sphere.cpp
src/graphics/shaders/: pl_shader_manager.cpp
src/graphics/textures/: pl_texture_manager.cpp
src/input/mouse/: pl_mouse_manager.cpp
